# 3D-reconstruction

./: CMakeLists.txt  README.md
docker/: .env  (+2 more)
src/3D-reconstruction/: CMakeLists.txt  main.cu
src/Algorithms/: AlgorithmFactory.cpp  AlgorithmFactory.h  CMakeLists.txt  IAlgorithm.h  IAlgorithmFactory.h  ICPUAlgorithm.h  IGPUAlgorithm.h
src/Algorithms/DataTransferring/: DeviceToHostTransferringAlgorithm.cpp  DeviceToHostTransferringAlgorithm.h  HostToDeviceTransferringAlgorithm.cpp  HostToDeviceTransferringAlgorithm.h
src/Algorithms/Decoding/: CUDAImageDecodingAlgorithm.cpp  CUDAImageDecodingAlgorithm.h  CpuImageDecodingAlgorithm.cpp  CpuImageDecodingAlgorithm.h  ImageDecodingAlgorithm.cpp  ImageDecodingAlgorithm.h
src/Algorithms/ImageProcessing/: CUDAConvolutionAlgorithm.cpp  CUDAConvolutionAlgorithm.h  CUDAImageBinarizationAlgorithm.cpp  CUDAImageBinarizationAlgorithm.h  CUDAImageConvolutionAlgorithm.cpp  CUDAImageConvolutionAlgorithm.h  CUDAImageResizeAlgorithm.cpp  CUDAImageResizeAlgorithm.h  CUDAImageSeparableConvolutionAlgorithm.cpp  CUDAImageSeparableConvolutionAlgorithm.h  CUDAResizeAlgorithm.cpp  CUDAResizeAlgorithm.h  CUDASeparableConvolutionAlgorithm.cpp  CUDASeparableConvolutionAlgorithm.h  ImageBinarizationAlgorithm.cpp  ImageBinarizationAlgorithm.h  ImageConvolutionAlgorithm.cpp  ImageConvolutionAlgorithm.h  ImageResizeAlgorithm.cpp  ImageResizeAlgorithm.h  ImageSeparableConvolutionAlgorithm.cpp  ImageSeparableConvolutionAlgorithm.h
src/Algorithms/KafkaIO/: KafkaConsumptionAlgorithm.cpp  KafkaConsumptionAlgorithm.h  KafkaMessageParsingAlgorithm.cpp  KafkaMessageParsingAlgorithm.h  KafkaProducingAlgorithm.cpp  KafkaProducingAlgorithm.h
src/Algorithms/Photogrammetry/: AKAZEKeypointDetectionAlgorithm.cpp  AKAZEKeypointDetectionAlgorithm.h  BundleAdjustmentAlgorithm.cpp  BundleAdjustmentAlgorithm.h  CUDAAKAZEKeypointDetectionAlgorithm.cpp  CUDAAKAZEKeypointDetectionAlgorithm.h  CUDABundleAdjustmentAlgorithm.cpp  CUDABundleAdjustmentAlgorithm.h  CUDAKeyPointFilteringAlgorithm.cpp  CUDAKeyPointFilteringAlgorithm.h  CUDAKeyPointMatchingAlgorithm.cpp  CUDAKeyPointMatchingAlgorithm.h  CUDAMeshReconstructionAlgorithm.cpp  CUDAMeshReconstructionAlgorithm.h  CUDAMeshRefinementAlgorithm.cpp  CUDAMeshRefinementAlgorithm.h  CUDAMeshTexturingAlgorithm.cpp  CUDAMeshTexturingAlgorithm.h  CUDAPointCloudDensificationAlgorithm.cpp  CUDAPointCloudDensificationAlgorithm.h  DatasetCollectingAlgorithm.cpp  DatasetCollectingAlgorithm.h  DatasetInitializationAlgorithm.cpp  DatasetInitializationAlgorithm.h  KeyPointFilteringAlgorithm.cpp  KeyPointFilteringAlgorithm.h  KeyPointMatchingAlgorithm.cpp  (+9 more)
src/Config/: CMakeLists.txt  ConfigNodes.h  DefaultJsonConfigGenerator.cpp  DefaultJsonConfigGenerator.h  IConfig.h  JsonConfig.cpp  JsonConfig.h  JsonConfigManager.cpp  JsonConfigManager.h
src/DataStructures/: CMakeLists.txt  CUDAImage.cpp  CUDAImage.h  CUDAImageDescriptor.cpp  CUDAImageDescriptor.h  DenseDepthMapData.cpp  DenseDepthMapData.h  DepthEstimator.cpp  DepthEstimator.h  DepthMapsData.cpp  DepthMapsData.h  FundamentalMatrixRobustModelEstimator.cpp  FundamentalMatrixRobustModelEstimator.h  ImageDescriptor.cpp  ImageDescriptor.h  KeyPoint.cpp  KeyPoint.h  ModelDataset.cpp  ModelDataset.h  ProcessingData.cpp  ProcessingData.h  ProcessingQueue.h  ProcessingQueueManager.cpp  ProcessingQueueManager.h  ReconstructionParams.cpp  ReconstructionParams.h  RegionsProvider.cpp  RegionsProvider.h  Scene.cpp  Scene.h  ThreadSafeQueue.h
src/Decoding/: CMakeLists.txt  IImageDecoder.h  ImageDecoderFactory.cpp  ImageDecoderFactory.h  NvJPEG2KChannelMerging.cu  NvJPEG2KChannelMerging.h  NvJPEG2kDecoder.cpp  NvJPEG2kDecoder.h  NvJPEG2kImageDecoder.cpp  NvJPEG2kImageDecoder.h  NvJPEGDecoder.cpp  NvJPEGDecoder.h  NvJPEGHardwareImageDecoder.cpp  NvJPEGHardwareImageDecoder.h  NvJPEGImageDecoder.cpp  NvJPEGImageDecoder.h  NvidiaImageDecoder.cpp  NvidiaImageDecoder.h  OpenCVImageDecoder.cpp  OpenCVImageDecoder.h
src/Encoding/: CMakeLists.txt  IImageEncoder.h  ImageEncoderFactory.cpp  ImageEncoderFactory.h  NvJPEG2kImageEncoder.cpp  NvJPEG2kImageEncoder.h  NvJPEGHardwareImageEncoder.cpp  NvJPEGHardwareImageEncoder.h  NvJPEGImageEncoder.cpp  NvJPEGImageEncoder.h  OpenCVImageEncoder.cpp  OpenCVImageEncoder.h
src/GPU/: CMakeLists.txt  GPU.h  GpuManager.cpp  GpuManager.cu  GpuManager.h
src/Log/: CMakeLists.txt  Logger.cpp  Logger.h
src/Networking/: AmazonBucketAPI.cpp  AmazonBucketAPI.h  AmazonBucketStorage.cpp  AmazonBucketStorage.h  CMakeLists.txt  EndpointListener.cpp  EndpointListener.h  HttpServer.cpp  HttpServer.h  HttpSession.h  HttpsServer.cpp  HttpsServer.h  HttpsSession.cpp  HttpsSession.h  IWebServer.cpp  IWebServer.h  KafkaConsumer.cpp  KafkaConsumer.h  KafkaMessage.cpp  KafkaMessage.h  KafkaProducer.cpp  KafkaProducer.h  WebServer.cpp  WebServer.h  WebServerFactory.cpp  WebServerFactory.h  WebServerManager.cpp  WebServerManager.h
src/Pipeline/: CMakeLists.txt  ModelDataset.h
src/Processing/: CMakeLists.txt  CpuProcessor.cpp  CpuProcessor.h  EndlessThread.cpp  EndlessThread.h  GpuProcessor.cpp  GpuProcessor.h  IProcessor.cpp  IProcessor.h  IThread.h  KafkaDatasetCollector.cpp  KafkaDatasetCollector.h  ProcessorFactory.cpp  ProcessorFactory.h  ProcessorManager.cpp  ProcessorManager.h  Thread.cpp  Thread.h
src/Service/: CMakeLists.txt  KafkaDatasetSender.cpp  KafkaJpegDatasetSender.cpp  Service.cpp  Service.cu  ServiceSDK.cpp  ServiceSDK.h
src/Storage/: AmazonBucketStorage.cpp  AmazonBucketStorage.h  CMakeLists.txt  FilesystemStorage.cpp  FilesystemStorage.h
src/Utils/: CMakeLists.txt  FastPimpl.h  PathUtils.cpp  PathUtils.h  StackTraceDumper.cpp  StackTraceDumper.h  UUIDGenerator.cpp  UUIDGenerator.h
test/: CMakeLists.txt  cuda_test_kernels.cu  cuda_test_kernels.h  http_server_test.cpp  test.cpp  testData.txt  test_aws_bucket.cpp  test_cuda_akaze.cpp  test_cuda_image_descriptor.cpp  test_cuda_kernel_cpu_model.cpp  test_image_decoders.cpp  test_json.cpp  test_npp_convolution.cpp  test_npp_grayscale.cpp  test_npp_multiplication.cpp  test_npp_resize.cpp  test_scharr_filter.cpp
(+29 files in other folders)
